3. Basic css-js-jQ-Vue Relationship strucuture

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
      <!-- NASLOVNA -->
      <div id="pghb0" class="modalPages active">
        <div class="absoluteWrapper">
-          <button id="onama" class="btn">O NAMA</button>
+          <button id="onama" class="btn elementCenter">O NAMA</button>
        </div>
-       <img id="coverimg" src="assets/imgs/coverImage01.jpg" />
+       <img class="coverimg" src="assets/imgs/coverImage01.jpg" />
      </div>
 
      <!-- KATALOG -->
