--- a/index.html
+++ b/index.html
@@ -37,9 +37,21 @@
      <!-- NASLOVNA -->
      <div id="pghb0" class="modalPages active">
        <div class="absoluteWrapper">
-          <button id="onama" class="btn elementCenter">O NAMA</button>
+          <button id="onama" class="btn elementCenter" onclick="pfms.slideshow.activate()">O NAMA</button>
+
+          <!-- Slideshow Buttons -->
+          <div>
+            <!-- <button-slide slideRight="false"></button-slide> -->
+          </div>
        </div>
-       <img class="coverimg" src="assets/imgs/coverImage01.jpg" />
+       <img id="coverimg" class="coverimg" src="assets/imgs/coverImage01.jpg" />
+
+       <!-- Slideshow Images -->
+       <div id="slideshow">
+         <img src="assets/imgs/vision.jpg" class="coverimg slide" />
+         <img src="assets/imgs/mission.jpg" class="coverimg slide" />
+         <img src="assets/imgs/goals.jpg" class="coverimg slide" />
+       </div>
      </div>
 
      <!-- KATALOG -->
