8. Onama text positioning done, need to add shading as text background

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
           <!-- Slideshow Text -->
           <div class="slideText slide0 textCenter" data-myParent="0">Postati vodeća tvrtka u proizvodnji slastičarskih proizvoda te se proširiti na inozemna tržišta</div>
 
-          <div class="slideText textCenter" data-myParent="1">
+          <div class="slideText slideParent1 textCenter" data-myParent="1">
             <div class="slideText slide1" data-myParent="1">Svakodnevno proizvodimo visokokvalitetne slastičarske proizvode, razvijamo nove recepture</div>
             <div class="slideText slide1" data-myParent="1">Trudom naših zaposlenika postajemo sve uspješniji te nastojimo zadržati povjerenje naših kupaca stvaranjem slatkih trenutaka zadovoljstva</div>
           </div>
 
-          <div class="slideText textCenter" data-myParent="2">
+          <div class="slideText slideParent2 textCenter" data-myParent="2">
             <div class="slideText slide2" data-myParent="2">Pronaći novi poslovni prostor do 2020. godine</div>
             <div class="slideText slide2" data-myParent="2">Proširiti asortiman do 2021. godine</div>
             <div class="slideText slide2" data-myParent="2">Ostvariti mjesečni profit od 20.000,00 kn do 2020. godine</div>
