9. Onama Second And Third Slide Graphics and text done but need positioning bug fixes

--- a/index.html
+++ b/index.html
@@ -46,18 +46,25 @@
           </div>
 
           <!-- Slideshow Text -->
-          <div class="slideText slide0 textCenter" data-myParent="0">Postati vodeća tvrtka u proizvodnji slastičarskih proizvoda te se proširiti na inozemna tržišta</div>
+          <div class="slideText slideParent0 textCenter" data-myParent="0">
+            <div class="slideText slide0" data-myParent="0"><span class="slideTextBackground0">Postati vodeća tvrtka u proizvodnji slastičarskih proizvoda</span></div>
+            <div class="slideText slide0" data-myParent="0"><span class="slideTextBackground0">Proširiti se na inozemna tržišta</span></div>
+          </div>
+          <!--<div class="slideTextBackground slide0 elementCenter" data-myParent="0"></div>-->
 
           <div class="slideText slideParent1 textCenter" data-myParent="1">
-            <div class="slideText slide1" data-myParent="1">Svakodnevno proizvodimo visokokvalitetne slastičarske proizvode, razvijamo nove recepture</div>
-            <div class="slideText slide1" data-myParent="1">Trudom naših zaposlenika postajemo sve uspješniji te nastojimo zadržati povjerenje naših kupaca stvaranjem slatkih trenutaka zadovoljstva</div>
+            <div class="slideText slide1" data-myParent="1">Trudom naših zaposlenika postajemo sve uspješniji te nastojimo zadržati povjerenje naših kupaca stvaranjem slatkih trenutaka zadovoljstva</div><br>
+            <div class="slideText slide1" data-myParent="1">Svakodnevno proizvodimo visokokvalitetne slastičarske proizvode</div><br>
+            <div class="slideText slide1" data-myParent="1">Razvijamo nove recepture</div>
           </div>
 
           <div class="slideText slideParent2 textCenter" data-myParent="2">
-            <div class="slideText slide2" data-myParent="2">Pronaći novi poslovni prostor do 2020. godine</div>
-            <div class="slideText slide2" data-myParent="2">Proširiti asortiman do 2021. godine</div>
-            <div class="slideText slide2" data-myParent="2">Ostvariti mjesečni profit od 20.000,00 kn do 2020. godine</div>
-            <div class="slideText slide2" data-myParent="2">Postati tvrtka koja postavlja nove standarde izvrsnosti u proizvodnji slastičarskih proizvoda u 2020. godini</div>
+            <span class="slideText slide2 slideTextBackground2">
+              Proširiti asortiman do 2021. godine<br>
+              Pronaći novi poslovni prostor do 2020. godine<br>
+              Ostvariti mjesečni profit od 20.000,00 kn do 2020. godine<br>
+              Postati tvrtka koja postavlja nove standarde izvrsnosti u proizvodnji slastičarskih proizvoda u 2020. godini<br>
+            </span>
           </div>
 
        </div>
@@ -66,7 +73,7 @@
        <img id="coverimg" class="coverimg" src="assets/imgs/coverImage01.jpg" />
 
        <!-- Slideshow Images -->
-       <div class="slideshow"></div>
+       <div class="slideshow">
          <img src="assets/imgs/vision.jpg" class="coverimg slide" data-parent="0" />
          <img id="slide02gradient" src="assets/imgs/gradient01.jpg" class="coverimg slideGradient" data-myParent="1" />
          <img id="slide02img" src="assets/imgs/mission05.png" class="sideimg slide" data-parent="1" />
