--- a/newindex.html
+++ b/newindex.html
@@ -38,8 +38,6 @@
      <div id="pghb0" class="modalPages active justify-content-center align-items-center" :style="[(0>count) ? {backgroundImage: 'url('+ basePath+ 'coverimgMD.jpg)'} : {backgroundImage: 'url('+ basePath+slideshowImages[count] +')'}]">
        <button id="onama" class="btn" @click="activate()" @click.prevent="count++">O NAMA</button>
 
-       <!-- Slide1 Content -->
-
        <!-- Slideshow Buttons -- Content Between -->
        <div id="shBtns" class="col">
          <button class="slideBtns float-left" v-bind:disabled="count === 0" @click.prevent="count--" @click="slide()"><i class="fas fa-chevron-circle-left"></i></button>
@@ -52,10 +50,16 @@
          <div class="slideIteratable slide1">
            <div class="c1"><div>Postati vodeća<br> tvrtka u proizvodnji<br> slastičarskih proizvoda</div></div>
            <div class="c2"><div>Proširiti se<br> na inozemna<br> tržišta</div></div>
+           <div class="c3"><div>Osvojiti<br> domaće<br> tržište</div></div>
          </div>
 
          <!-- Slide2 -->
          <div class="slideIteratable slide2">
+           <div class="b1">
+             Razvijamo nove recepture.<br>
+             Svakodnevno proizvodimo visokokvalitetne slastičarske proizvode.<br>
+             Trudom naših zaposlenika postajemo sve uspješniji te nastojimo zadržati povjerenje naših kupaca stvaranjem slatkih trenutaka zadovoljstva.
+           </div>
          </div>
 
          <!-- Slide3 -->
@@ -66,6 +70,10 @@
              Postati tvrtka koja postavlja nove standarde izvrsnosti u proizvodnji slastičarskih proizvoda u 2020. godini<br>
          </div>
        </div>
+
+       <!-- Content not omitted by container -->
+       <!-- Slide 2 -->
+       <img class="nonContainer slide2" src="assets/imgs/mission05.png" />
      </div>
 
      <!-- KATALOG -->
