13. Katalog: some hard Vue and BS problems RIP

--- a/newindex.html
+++ b/newindex.html
@@ -78,6 +78,16 @@
 
      <!-- KATALOG -->
      <div id="pghb1" class="modalPages">
+       <div id="k" class="row d-flex justify-content-center">
+           <!--<img v-for="i in k" :src="basePath+'k/k'+i+'.jpg'" />-->
+           <img src="assets/imgs/k/k1.jpg">
+           <img src="assets/imgs/k/k2.jpg">
+           <img src="assets/imgs/k/k3.jpg">
+       </div>
+       <!--
+       <div id="f" class="col" v-for="i in f"></div>
+       <div id="p" class="col" v-for="i in p"></div>
+       -->
      </div>
 
      <!-- KONTAKT -->
