--- a/newindex.html
+++ b/newindex.html
@@ -8,7 +8,7 @@
 <!-- Inc -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -80,15 +80,34 @@
      <div id="pghb1" class="modalPages">
        <div class="container-fluid">
          <!-- Krafne -->
-         <div id="k" class="row d-flex justify-content-around foodContainer foodRow">
-           <img v-for="i in k" :src="basePath+'k/k'+i+'.jpg'" />
+         <div class="titleAndFoodWrapper">
+           <div class="row d-flex justify-content-center foodTitle">Krafne</div>
+           <div class="row foodSection">
+             <div id="k" class="col-12">
+               <!-- Image Rows Here -->
+             </div>
+          </div>
          </div>
 
          <!--Fritule -->
-         <div id="f" class="foodContainer"></div>
+         <div class="titleAndFoodWrapper">
+           <div class="row d-flex justify-content-center foodTitle">Fritule</div>
+           <div class="row foodSection">
+             <div id="f" class="col-12">
+               <!-- Image Rows Here -->
+             </div>
+          </div>
+         </div>
 
          <!-- Palacinke -->
-         <div id="p" class="foodContainer"></div>
+         <div class="titleAndFoodWrapper">
+           <div class="row d-flex justify-content-center foodTitle">Palačinke</div>
+           <div class="row foodSection">
+             <div id="p" class="col-12">
+               <!-- Image Rows Here -->
+             </div>
+          </div>
+         </div>
 
       </div>
      </div>
