17. Kontakt almost done, icons only need to have links asigned

--- a/newindex.html
+++ b/newindex.html
@@ -14,8 +14,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 <!-- MODALS.START -->
 <!-- Actual Website as Modal -->
 <div class="modal fade" data-backdrop="false" id="myModal">
@@ -114,6 +113,34 @@
 
      <!-- KONTAKT -->
      <div id="pghb2" class="modalPages">
+       <div class="container-fluid my-auto">
+         <div class="row justify-content-center">
+           <!-- Facebook -->
+           <div class="iconContainer bg-dark">
+             <a href="https://google.com" target="_blank"><i class="fab fa-facebook text-primary"></i></a><br>
+             <span>Click the Icon</span>
+           </div>
+           <!-- Instagram -->
+           <div class="iconContainer bg-dark">
+             <a href="https://google.com" target="_blank"><i class="fab fa-instagram" id="instagramColor"></i></a><br>
+             <span>Click the Icon</span>
+           </div>
+
+           <!-- Twitter -->
+           <div class="iconContainer bg-dark">
+             <a href="https://google.com" target="_blank"><i class="fab fa-twitter-square text-primary"></i></a><br>
+             <span>Click the Icon</span>
+           </div>
+         </div>
+
+         <!-- Gmail -->
+         <div class="row justify-content-center">
+           <div class="iconContainer bg-dark">
+             <i class="far fa-envelope text-danger"></i><br>
+             <span>vtsweetplace@gmail.com<span>
+           </div>
+         </div>
+       </div>
      </div>
 
    </div>
