18. Few Style corrections, Kontakt needs more color corrections

--- a/newindex.html
+++ b/newindex.html
@@ -116,18 +116,18 @@
        <div class="container-fluid my-auto">
          <div class="row justify-content-center">
            <!-- Facebook -->
-           <div class="iconContainer bg-dark">
+           <div class="iconContainer">
              <a href="https://google.com" target="_blank"><i class="fab fa-facebook text-primary"></i></a><br>
              <span>Click the Icon</span>
            </div>
            <!-- Instagram -->
-           <div class="iconContainer bg-dark">
+           <div class="iconContainer">
              <a href="https://google.com" target="_blank"><i class="fab fa-instagram" id="instagramColor"></i></a><br>
              <span>Click the Icon</span>
            </div>
 
            <!-- Twitter -->
-           <div class="iconContainer bg-dark">
+           <div class="iconContainer">
              <a href="https://google.com" target="_blank"><i class="fab fa-twitter-square text-primary"></i></a><br>
              <span>Click the Icon</span>
            </div>
@@ -135,7 +135,7 @@
 
          <!-- Gmail -->
          <div class="row justify-content-center">
-           <div class="iconContainer bg-dark">
+           <div class="iconContainer">
              <i class="far fa-envelope text-danger"></i><br>
              <span>vtsweetplace@gmail.com<span>
            </div>
